--- a/business-plan.html
+++ b/business-plan.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Plan</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <h1 class="border-4 p-5 m-6 text-3xl text-center font-bold bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-blue-500">Gino Chang Consulting Firm</h1>
+    <div class="md:flex font-bold space-x-4 ">
+        <h1 class="md:w-1/5 md:p-3 text-right">
+            <a> </a>
+        </h1>
+        <h2 class="md:w-1/5 p-3 text-right">
+            <a> </a>
+        </h2>
+        <h2 class="md:w-1/5 border-8 py-3 px-3  bg-clip-padding bg-gray-200 text-center">
+            <a href="index.html">Main</a>
+        </h2>
+        <h1 class="md:w-1/5 border-8 py-3 px-3  text-white bg-clip-padding bg-gray-500 text-center">
+            <a href="business-plan.html">Business Plan</a>
+        </h1>
+        <h2 class="md:w-1/5 border-8 py-3 px-3  bg-clip-padding bg-gray-200 text-center">
+            <a href="about-us.html">About Gino Chang</a>
+        </h2>
+    </div>
+
     <h1><strong>Business Plan</strong></h1>
     <p>We help organizations across the private, public, and social sectors create the Change that Matters most to them.</P>
     <p>From the C-suite to the front line, we partner with our clients to transform their organizations, embed technology into everything they do, and build enduring capabilities.</p>  
     <p>With exceptional people in 65 countries, we combine global expertise and local insight to help you turn your ambitious goals into reality.</p>
-    <p><a href="index.html">Go Back To Homepage</a></p>
+    <p class="border w-1/6 mt-4 text-white bg-purple-500 rounded px-4 py-2" ><a href="index.html">Go Back To Main</a></p>
 </body>
 </html>
