--- a/about-us.html
+++ b/about-us.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Gino Chang</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <h1 class="border-4 p-5 m-6 text-3xl text-center font-bold bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-blue-500">Gino Chang Consulting Firm</h1>
+    <div class="md:flex font-bold space-x-4 ">
+        <h1 class="md:w-1/5 md:p-3 text-right">
+            <a> </a>
+        </h1>
+        <h2 class="md:w-1/5 p-3 text-right">
+            <a> </a>
+        </h2>
+        <h2 class="md:w-1/5 border-8 py-3 px-3  bg-clip-padding bg-gray-200 text-center">
+            <a href="index.html">Main</a>
+        </h2>
+        <h1 class="md:w-1/5 border-8 py-3 px-3  bg-clip-padding bg-gray-200 text-center">
+            <a href="business-plan.html">Business Plan</a>
+        </h1>
+        <h2 class="md:w-1/5 border-8 py-3 px-3  text-white bg-clip-padding bg-gray-500 text-center">
+            <a href="about-us.html">About Gino Chang</a>
+        </h2>
+    </div>
     <h1><strong>About Gino Chang</strong></h1>
     <p><strong>KELLOGG SCHOOL OF MANAGEMENT,NORTHWESTERN UNIVERSITY </strong></p>
     <p>Candidate for Master of Business Administration degree, June 2021 through one year accelerated program</p>
     <p><a href="https://www.linkedin.com/in/gino-chun-ju-chang-6baa651b/">LinkedIn</a></p>
-    <p><a href="index.html">Go Back To Homepage</a></p>
+    <p class="border w-1/6 mt-4 text-white bg-purple-500 rounded px-4 py-2" ><a href="index.html">Go Back To Main</a></p>
 </body>
 </html>
