--- a/about-us.html
+++ b/about-us.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="border-4 p-5 m-6 text-3xl text-center font-bold bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-blue-500">Gino Chang Consulting Firm</h1>
-    <div class="md:flex font-bold space-x-4 ">
+    <div class="md:flex font-bold space-x-4  space-y-2">
         <h1 class="md:w-1/5 md:p-3 text-right">
             <a> </a>
         </h1>
