--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1 class="border-4 p-5 m-6 text-3xl text-center font-bold bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-blue-500">Gino Chang Consulting Firm</h1>
-    <div class="md:flex font-bold space-x-4 ">
+    <div class="md:flex font-bold space-x-4 space-y-2">
         <h1 class="md:w-1/5 md:p-3 text-right">
             <a> </a>
         </h1>
@@ -30,7 +30,7 @@
 
 
     <p class="border-4 text-center my-5 md:w-1/2 font-bold text-2xl text-center border-green-300">My Photo</p>
-    <p><iframe class="" src="https://drive.google.com/file/d/1gYHVWHhNHEuruNJ9GJAYGesEyV0FJzmj/preview" width="640" height="480"></iframe></p>
+    <p><iframe  src="https://drive.google.com/file/d/1gYHVWHhNHEuruNJ9GJAYGesEyV0FJzmj/preview" width="640" height="480"></iframe></p>
 
     <h1 class="my-16 text-center font-bold mx-4 text-3xl">Need Consulting Service from Gino? </h1>
     <form netlify class="ml-5 mb-20 font-bold ">
