--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <label class="block font-bold" for="name">What is your name?</label>
         <input class="mr-7 p-3 border-2 border-gray-400 rounded shadow-xl focus:outline-none focus:ring-green-400 focus:border-green-400"    type="text" id="name" name="name">
       
-        <label class="block font-bold mt-5" for="favorite-color">What is your question?</label>
+        <label class="block font-bold mt-5" for="question">What is your question?</label>
         <input class="mr-7 p-3 border-2 border-gray-400 rounded shadow-xl focus:outline-none focus:ring-green-400 focus:border-green-400" type="text" id="question" name="question">
         
-        <label class="block font-bold mt-5" for="favorite-color">Contact Information?</label>
+        <label class="block font-bold mt-5" for="contact">Contact Information?</label>
         <input class="mr-7 p-3 border-2 border-gray-400 rounded shadow-xl focus:outline-none focus:ring-green-400 focus:border-green-400" type="text" id="contact" name="contact">
 
         <button class="block mt-5  text-white bg-gradient-to-r from-green-400 to-blue-500 rounded px-4 py-2 text-3xl">Submit form!</button>
